# libatom

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  atom.pc.in  autogen.sh  configure.ac  entity.pc.in
atom/: Makefile.am  atom.cpp  atom.h  blob.cpp  blob.h  blobvalue.cpp  blobvalue.h  booleanvalue.cpp  booleanvalue.h  dictvalue.cpp  dictvalue.h  exceptions.h  floatvalue.cpp  floatvalue.h  intvalue.cpp  intvalue.h  listvalue.cpp  listvalue.h  message.cpp  message.h  nullvalue.cpp  nullvalue.h  osc.cpp  osc.h  pointervalue.cpp  pointervalue.h  stringvalue.cpp  stringvalue.h  value.cpp  value.h  version.h.in
atom/tests/: Makefile.am  check_atom.cpp  check_blob.cpp  check_values.cpp
entity/: Makefile.am  attribute.cpp  attribute.h  documented.cpp  documented.h  entity.cpp  entity.h  entitymethod.cpp  entitymethod.h  entitysignal.cpp  entitysignal.h  exceptions.h  hello.h  logger.cpp  logger.h  namedobject.cpp  namedobject.h  namedobjectmap.h  version.h.in
entity/tests/: Makefile.am  check_attributes.cpp  check_entity.cpp  check_logger.cpp
examples/simple/: Makefile  main.cpp
prototypes/dynamic-values/: build.sh  main.cpp
prototypes/entity-dicts/: build.sh  main.cpp
prototypes/print-blobs/: build.sh  hex.cpp
